8 commit Crear Equipo Categorias

--- a/style.css
+++ b/style.css
@@ -75,3 +75,31 @@ body{
 	padding: 15px;
 }
 
+#btn{
+	color: #ffffff;
+	background-color: #42ca9a;
+	border-color: #042441;
+	display: inline-block;
+	margin-bottom: 0;
+	font-weight: normal;
+	text-align: center;
+	vertical-align: middle;
+	cursor: pointer;
+	background-image: none;
+	border: 1px solid transparent;
+	white-space: nowrap;
+	padding: 6px 6px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	border-radius: 4px;
+	vertical-align: middle;
+}
+
+form{
+
+	height: 100%;
+	width: 160px;
+	
+	
+}
+
