--- a/style.css
+++ b/style.css
@@ -103,3 +103,18 @@ form{
 	
 }
 
+.modal-content3{
+    position: relative;
+    background-color: #009688;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    box-shadow: 0 3px 9px rgba(0,0,0,.5);
+}
+.H3{
+	text-align: center;
+}
