--- a/style.css
+++ b/style.css
@@ -86,13 +86,14 @@ body{
 	vertical-align: middle;
 	cursor: pointer;
 	background-image: none;
-	border: 1px solid transparent;
+	border: 1px solid ;
 	white-space: nowrap;
 	padding: 6px 6px;
 	font-size: 14px;
 	line-height: 1.42857143;
-	border-radius: 4px;
+	border-radius: 10px;
 	vertical-align: middle;
+	
 }
 
 form{
